--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@
 version: '3.0'
 services:
   web:
+    build: .
+    ports:
+      - "5000:5000"
     # TODO: build context, ports and redis dependency
     volumes:
       - .:/code
@@ -10,7 +13,13 @@ services:
       FLASK_ENV: development
       REDIS_HOST: redis
       REDIS_PORT: 6379
+    depends_on:
+      - redis
   redis:
     image: redis:6.0-rc4-alpine
+    volumes:
+      - "redis-data:/data"
     # TODO: missing persistence for redis. You need to persist /data directory.
 
+volumes:
+  redis-data:
